@@ -1823,20 +1823,21 @@ void buildWordCheck(int documentCheck)
 
 	spellCheckWord=gtk_dialog_new();
 	gtk_window_set_title((GtkWindow*)spellCheckWord,gettext("Spell check word"));
-	vbox=gtk_vbox_new(true,8);
 
-	hbox=gtk_hbox_new(true,8);
+	vbox=gtk_vbox_new(true,0);
+	hbox=gtk_hbox_new(true,0);
 
 	sprintf((char*)&labeltext,gettext("Change <i><b>%s</b></i> to: "),badWord);
 	label=gtk_label_new((char*)&labeltext);
 	gtk_label_set_use_markup((GtkLabel*)label,true);
 	gtk_box_pack_start(GTK_BOX(hbox),label,true,true,0);
 
-	wordListDropbox=gtk_combo_box_text_new();
+	wordListDropbox=gtk_combo_box_text_new_with_entry();
+
 	gtk_box_pack_start(GTK_BOX(hbox),wordListDropbox,true,true,0);
 	gtk_box_pack_start(GTK_BOX(vbox),hbox,true,true,0);
 
-	hbox=gtk_hbox_new(true,8);
+	hbox=gtk_hbox_new(true,0);
 	button=gtk_button_new_from_stock(GTK_STOCK_APPLY);
 	gtk_box_pack_start(GTK_BOX(hbox),button,true,true,0);
 	g_signal_connect(G_OBJECT(button),"clicked",G_CALLBACK(doChangeWord),(gpointer)(long)docflag);
