@@ -97,18 +97,21 @@ void doChangeWord(GtkWidget* widget,gpointer data)
 				}
 
 			goodWord=gtk_combo_box_text_get_active_text((GtkComboBoxText*)wordListDropbox);
+			end=start;
+			gtk_text_iter_forward_chars(&end,strlen(badWord));
 			gtk_text_buffer_delete((GtkTextBuffer*)page->buffer,&start,&end);
 			gtk_text_buffer_insert((GtkTextBuffer*)page->buffer,&start,goodWord,-1);
-			debugFree(&goodWord,"doChangeWord goodWord");
 		}
 	else
 		goodWord=gtk_combo_box_text_get_active_text((GtkComboBoxText*)wordListDropbox);
 
-	aspell_speller_store_replacement(spellChecker,badWord,-1,goodWord,-1);
+	if((goodWord!=NULL) && (badWord!=NULL))
+		aspell_speller_store_replacement(spellChecker,badWord,-1,goodWord,-1);
 
 	gtk_widget_destroy(spellCheckWord);
-	if(badWord!=NULL)
-		debugFree(&badWord,"doChangeWord badWord");
+	debugFree(&badWord,"doChangeWord badWord");
+	if((long)data==0)
+		debugFree(&goodWord,"doChangeWord goodWord");
 }
 
 void doAddIgnoreWord(GtkWidget* widget,gpointer data)
@@ -210,6 +213,7 @@ void doSpellCheckDoc(GtkWidget* widget,gpointer data)
 							diff+=goodwordlen-token.len;
 							memmove(word_begin+goodwordlen,word_begin+token.len,strlen(word_begin+token.len)+1);
 							memcpy(word_begin,goodWord,goodwordlen);
+							debugFree(&goodWord,"doSpellCheckDoc goodWord");
 						}
 				}
 
@@ -247,8 +251,9 @@ void doSpellCheckDoc(GtkWidget* widget,gpointer data)
 					fclose(out);
 					gtk_text_buffer_set_modified((GtkTextBuffer*)page->buffer,true);
 				}
+			gtk_text_buffer_set_modified((GtkTextBuffer*)page->buffer,false);
+			setSensitive();
 		}
-
 	gtk_text_buffer_end_user_action((GtkTextBuffer*)page->buffer);
 }
 #endif
